fix: Review의 멤버를 pet으로 바꾸고 data.sql 삭제 (#246)
* fix: data.sql 삭제

* chore: 주석 삭제 및 클래스 패키지 변경

* chore: reformat coded

* refactor: deleteAll 사용하지 않기

* fix: truncate를 메서드 이후에 실행함

* refactor: 식품이랑 브랜드는 beforeeach에서 만들어줌

* refactor: 바디가 없는 메서드 삭제

* refactor: RepositoryTest 상속

* feat: 도움이 돼요 엔티티 추가

* chore: 사용하지 않는 메서드 제거

* feat: 작성 당시 체중 필드

* Revert "feat: 도움이 돼요 엔티티 추가"

This reverts commit db21d2fa42338ed87327349694d4c290b3ac0c31.